# ctapipe_io_zfits

./: .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
docs/: Makefile  conf.py  index.rst  installation.rst  reference.rst
docs/reference/: ctapipe_io_zfits.dl0.rst  ctapipe_io_zfits.rst  index.rst
scripts/: convert_positions.py
src/ctapipe_io_zfits/: __init__.py  conftest.py  dl0.py  instrument.py  multifile.py  paths.py  time.py  version.py
src/ctapipe_io_zfits/resources/: array_element_positions_ctao_n.ecsv  subarray-ids.json
src/ctapipe_io_zfits/tests/: test_dl0.py  test_instrument.py  test_multifiles.py  test_paths.py  test_time.py
