# For more information on the content of this file,
# the developer documentation and the PyPA packaging documentation
# * https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# * The setuptools and setuptools_scm documentation for the respective sections
[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ctapipe_io_zfits"

description = "ctapipe io plugin for reading data in zfits file (ACADA Rel 1 DL0, CTAO R1v1)"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "Maximilian Linhoff", email = "maximilian.linhoff@tu-dortmund.de"},
]
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = [
    "numpy",
    "protozfits >=2.7.3,<3.0.0",
    "ctapipe >=0.24.0,<0.29.0",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
  "numpydoc",
  "ctao-sphinx-theme",
]
dev = [
  "pyproj",
  "setuptools_scm",
  "pre-commit",
]

# we can use self-references to simplify all
all = [
  "ctapipe_io_zfits[test,doc,dev]",
]

[project.entry-points.ctapipe_io]
ProtozfitsDL0EventSource = "ctapipe_io_zfits.dl0:ProtozfitsDL0EventSource"


[project.urls]
repository = "https://github.com/cta-observatory/ctapipe_io_zfits"
documentation = "https://ctapipe_io_zfits.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["ctapipe_io_zfits._dev_version"]

[tool.setuptools.package-data]
ctapipe_io_zfits = ["resources/*"]

[tool.setuptools_scm]
write_to = 'src/ctapipe_io_zfits/_version.py'

[tool.ruff]
line-length = 88
target-version = "py310"


[tool.ruff.lint]
extend-select = [
    "I", # isort
    "N", # pep8 naming
    "D", # pydocstyle
    "NPY", # numpy
    "PT", # pytest
    "UP", # pyupgrade
    "COM", # flake8-commas
    "ISC", # implicit string concat rules
    "ICN", # import name conventions
    "G", # logging
    "B", # flake8-bugbear
]
ignore = [
    "COM812", # incompatible with ruff format
    "ISC001", # incompatible with ruff format
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# no documentation linting for test files
"**/tests/**" = ["D"]
"**/tests_*.py" = ["D"]
"docs/conf.py" = ["D"]
"**/conftest.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.repo-review]
select = ["PY", "PP", "PC"]
ignore = [
    "PY007", # we do not use tox for now
    "PC140", # mypy is not used
    "PC170", # pygrep is not used
    "PC180", # prettier is not used
    "PC111", # blacken-docs is not used
    "PC901", # no CI setup currently for updating pre-commit hooks
]


[tool.pytest.ini_options]
minversion = "7"
testpaths = ["src"]
log_cli_level = "INFO"
xfail_strict = true
# print summary of failed tests, force errors if settings are misspelled
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = [
    "error",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\):DeprecationWarning",
]
